Pridané certifikácie a workshopy

--- a/mypage/webapp/view/MainPage.view.xml
+++ b/mypage/webapp/view/MainPage.view.xml
@@ -90,7 +90,7 @@
 				<subSections>
 					<ObjectPageSubSection titleUppercase="false">
 						 <blocks>
-							<m:Text text="Your schools, degrees…" />
+							<core:Fragment fragmentName="mypage.fragments.certifications" type="XML"/>
 						</blocks>	
 					</ObjectPageSubSection>
 				</subSections>
